--- a/index.html
+++ b/index.html
@@ -4,242 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rootkits en Ciberseguridad</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #fff;
-            overflow: hidden;
-        }
-
-        .slide-container {
-            width: 100vw;
-            height: 100vh;
-            position: relative;
-        }
-
-        .slide {
-            width: 100%;
-            height: 100%;
-            display: none;
-            padding: 60px 80px;
-            position: absolute;
-            top: 0;
-            left: 0;
-            animation: fadeIn 0.6s ease-in;
-        }
-
-        .slide.active {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        h1 {
-            font-size: 3.5em;
-            margin-bottom: 20px;
-            background: linear-gradient(45deg, #00f5ff, #ff00ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 30px rgba(0, 245, 255, 0.5);
-        }
-
-        h2 {
-            font-size: 2.5em;
-            margin-bottom: 30px;
-            color: #00f5ff;
-            text-shadow: 0 0 20px rgba(0, 245, 255, 0.6);
-        }
-
-        h3 {
-            font-size: 1.8em;
-            margin-bottom: 15px;
-            color: #ff00ff;
-        }
-
-        p, li {
-            font-size: 1.3em;
-            line-height: 1.8;
-            margin-bottom: 15px;
-            color: #e0e0e0;
-        }
-
-        .subtitle {
-            font-size: 1.5em;
-            color: #a0a0a0;
-            margin-top: 10px;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-            margin-top: 40px;
-        }
-
-        .card {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            padding: 25px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 245, 255, 0.3);
-        }
-
-        .icon {
-            font-size: 3em;
-            margin-bottom: 15px;
-        }
-
-        .timeline {
-            position: relative;
-            padding-left: 40px;
-            margin-top: 30px;
-        }
-
-        .timeline-item {
-            margin-bottom: 30px;
-            position: relative;
-        }
-
-        .timeline-item::before {
-            content: '';
-            position: absolute;
-            left: -35px;
-            top: 0;
-            width: 15px;
-            height: 15px;
-            background: #00f5ff;
-            border-radius: 50%;
-            box-shadow: 0 0 20px rgba(0, 245, 255, 0.8);
-        }
-
-        .timeline-item::after {
-            content: '';
-            position: absolute;
-            left: -28px;
-            top: 15px;
-            width: 2px;
-            height: calc(100% + 15px);
-            background: linear-gradient(to bottom, #00f5ff, transparent);
-        }
-
-        .timeline-item:last-child::after {
-            display: none;
-        }
-
-        ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        ul li {
-            padding-left: 30px;
-            position: relative;
-            margin-bottom: 15px;
-        }
-
-        ul li::before {
-            content: '▸';
-            position: absolute;
-            left: 0;
-            color: #00f5ff;
-            font-size: 1.5em;
-        }
-
-        .navigation {
-            position: fixed;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 15px;
-            z-index: 1000;
-        }
-
-        .nav-btn {
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            color: #fff;
-            padding: 12px 25px;
-            border-radius: 25px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: all 0.3s ease;
-        }
-
-        .nav-btn:hover {
-            background: rgba(0, 245, 255, 0.2);
-            border-color: #00f5ff;
-            box-shadow: 0 0 20px rgba(0, 245, 255, 0.5);
-        }
-
-        .slide-number {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            font-size: 1.2em;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        .danger-box {
-            background: rgba(255, 0, 100, 0.1);
-            border-left: 4px solid #ff0066;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-
-        .success-box {
-            background: rgba(0, 255, 100, 0.1);
-            border-left: 4px solid #00ff66;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 8px;
-        }
-
-        .center {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            height: 100%;
-        }
-
-        .logo {
-            font-size: 4em;
-            margin-bottom: 30px;
-            animation: pulse 2s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-        }
-
-        .highlight {
-            color: #00f5ff;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="slide-container">
